@@ -1,0 +1,116 @@
+<!-- -*- coding: utf-8 -*- -->
+<article xmlns="http://docbook.org/ns/docbook" version="5.0">
+
+  <info>
+    <title>Օգտվողի մասին BRL-CAD</title>
+
+    <author>
+      <personname>
+	<firstname>Christopher</firstname>
+	<othername>Sean</othername>
+	<surname>Morrison</surname>
+      </personname>
+
+      <affiliation>
+	<address>
+	  <orgname>BRL-CAD Open Source</orgname>
+	  <email>devs@brlcad.org</email>
+	</address>
+      </affiliation>
+    </author>
+
+    <author>
+      <contrib>
+        Armenian Translation
+      </contrib>
+      <personname>
+        <firstname>Karen</firstname>
+        <surname>Mgebrova</surname>
+      </personname>
+    </author>
+  </info>
+
+  <section xml:id="article-body">
+    
+    <para>
+      BRL-CAD հզոր խաչաձեւ հարթակի Open Source համակցական
+      կառուցողական Պինդ Geometry (CSG) մոդելավորման ամուր համակարգ,
+      որը ներառում է ինտերակտիվ 3D ամուր երկրաչափություն խմբագրում,
+      բարձր կատարողական ճառագայթների-հետեւել աջակցություն ցուցաբերելու
+      եւ երկրաչափական վերլուծություն, ցանցային բաշխված framebuffer
+      աջակցություն, պատկերի եւ ազդանշանի մշակման գործիքների ուղին,
+      տեղանքի պլանը գծելը եւ պրոտոնների քարտեզագրման աջակցություն
+      իրական պատկերի սինթեզ է, որ համակարգի կատարողականի
+      վերլուծությունը ելակետային Suite է, ներդրված scripting
+      ինտերֆեյսի եւ գրադարանների համար առողջ արագագործ երկրաչափական
+      ներկայացուցչության եւ վերլուծություն:
+    </para>
+
+    <para>
+      Ավելի քան 20 տարի, BRL-CAD եղել է հիմնական tri ծառայության
+      ամուր մոդելավորում CAD համակարգի կողմից օգտագործվում է ԱՄՆ
+      ռազմական եւ մոդելի զենք համակարգեր Խոցելիության եւ lethality
+      վերլուծություններ: Կոշտ մոդելավորում համակարգը հաճախ
+      օգտագործվում է մի շարք ռազմական, գիտական ​​եւ արդյունաբերական
+      կիրառություններ այդ թվում `նախագծման եւ վերլուծություն
+      տրանսպորտային միջոցների, մեխանիկական մասերի, եւ
+      ճարտարապետությունը. Փաթեթը է նաեւ օգտագործվել ճառագայթման դոզան
+      պլանավորման, բժշկական արտացոլման, համակարգչային գրաֆիկայի
+      կրթության, CSG հայեցակարգերի եւ մոդելավորման կրթության եւ
+      համակարգի կատարողականի ելակետային փորձարկման ի թիվս այլ
+      նպատակների համար.
+    </para>
+
+    <para>
+      BRL-CAD աջակցում է մեծ տեսականի, այդ թվում `երկրաչափական
+      ներկայացուցչությունների լայն շարք ավանդական CSG պարզունակ
+      անուղղակի չոր, ինչպիսիք են տներ, ellipsoids, cones, եւ tori,
+      ինչպես նաեւ բացահայտ չոր պատրաստված փակ հավաքածուներից միասնական
+      B-Spline մակերեսներին, ոչ Uniform բանական B-Spline (NURBS)
+      մակերեսների, N-Ջրաբաշխիչ Geometry (NMG), եւ զուտ faceted ցանց
+      երկրաչափություն. Բոլոր երկրաչափական օբյեկտները կարող են
+      համատեղվել օգտագործում են Բուլյան սահմանված-տեսական CSG
+      գործողությունների, այդ թվում միության, խաչմերուկում, եւ
+      տարբերությունը.
+    </para>
+
+    <para>
+      BRL-CAD եղել են ակտիվ զարգացման հետ դյուրատարություն
+      ժառանգություն, որը ներառում է այնպիսի համակարգերը, որպես
+      Դեկտեմբեր VAX-11/780 անընդմեջ 4.3 BSD, DECStations վազում
+      ULTRIX, Սիլիկոնային գրաֆիկա 3030, 4D «Իրիս», O2, օնիքս, եւ
+      ծագման համակարգերի վազում տարբեր տարբերակները IRIX, Sun
+      Microsystems Sun, 3 – րդ եւ Sun-4 Sparcs վազում SunOS է, Cray 1,
+      Cray X-պատգամավոր, Cray Y-պատգամավոր, եւ Cray 2 վազում UNICOS,
+      Դեկտեմբեր Alpha AXP վազում OSF / 1, Apple Macintosh II վարման A
+      / UX; iPSC/860 Hypercube վազում NX / 2, իսկ արտարժութային
+      Alliant / 8, FX/80, եւ FX/2800. Gould / Encore sel
+      PowerNode6000/9000 եւ NP1, ՀԱՋՈՐԴ workstations, IBM RS/6000,
+      HPPA 9000/700 վազում HPUX, վառ / Stardent, Encore Multi-Max եւ
+      շատ ավելին.
+    </para>
+
+    <para>
+      BRL-CAD մի հավաքածու է ավելի քան 400 գործիքներ, կոմունալ
+      ծառայությունների, եւ ծրագրեր կազմող ավելի քան մեկ միլիոն գծերը
+      կոդով.Փաթեթը, որը դիտավորյալ նախատեսված է լայնորեն խաչաձեւ
+      պլատֆորմը, եւ ակտիվորեն զարգանում են եւ պահպանվում են ընդհանուր
+      օպերացիոն համակարգ միջավայրում այդ թվում `BSD, Linux, Solaris,
+      Mac OS X, եւ Windows եւ այլն: BRL-CAD, որը բաժանվում է
+      երկուական եւ կոդով ձեւը, ինչպես նաեւ անվճար բաց կոդով ծրագրային
+      ապահովում (FOSS), նախատեսված Open Source նախաձեռնություն (OSI)
+      կողմից լիցենզիայի պայմանները:
+    </para>
+
+    <note>
+      <para>
+        Mike Muuss սկսեց սկզբնական ճարտարապետության եւ նախագծման
+        BRL-CAD դեռեւս 1979 թ. Մշակում, որպես միասնական փաթեթի սկսվել է
+        1983 թ. Առաջին հրապարակային թողարկումն իրականացվել է 1984
+        թ. BRL-CAD դարձավ բաց կոդով նախագիծ է 21 դեկտեմբերի 2004 թ.
+      </para>
+    </note>
+
+  </section>
+
+</article>
